package com.uitopic.restock.platform.iam.domain.model.aggregates;

public class User {
}
