package com.uitopic.restock.platform.iam.domain.model.valueobjects;

public enum RoleType {
    ADMIN,
    CASHIER,
    WAREHOUSEMAN
}
